@@ -1,3 +1,9 @@
+July 27, 2009 Wei Mingzhi <weimingzhi@gmail.com>
+
+ * plugins/dfxvideo/soft.c: Don't allow negative offsets in
+   FillSoftwareArea() and FillSoftwareAreaTrans().
+ * plugins/peopsxgl/soft.c: Likewise.
+
 July 24, 2009 Wei Mingzhi <weimingzhi@gmail.com>
 
  * libpcsxcore/cdriso.c: Implemented CCD parsing.
